--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 <li class="nav__items">
                     <!-- <a href="#questions" class="nav__links">Contacto</a> -->
                 </li>
-
                 <img src="images/close.svg" alt="close" class="nav__close">
             </ul>
 
@@ -74,14 +73,14 @@
     <main>
         <section class="container about" id="inicio">
             <h2 class="subtitle">¿Qué aprenderaz en los cursos?</h2>
-            <p class="about__paragraph">Todo lo necesario y obligatorio sobre manicuria (Higiene, productos, limado, preparacion de la fibra natural, esmaltado, y más).</p>
-            <p class="hero__paragraph">Elige aprender manicuria, una vez termines un curso, seras capaz de desenvolverte profesionalmente en la tecnica que hayas elegido.</p>
+            <p class="about__paragraph">Todo lo necesario y obligatorio sobre Manicuría (Higiene, productos, limado, preparación de la fibra natural, esmaltado, y más).</p>
+            <p class="hero__paragraph">Todo  para ser Lashista, una vez termines un curso, serás capaz de desenvolverte profesionalmente en la técnica que hayas elegido.</p>
 
 
             <div class="about__main">
                 <article class="about__icons">
                     <img src="images/muscle.png" class="about__icon" alt="">
-                    <h3 class="about__title">Acrilicas</h3>
+                    <h3 class="about__title">Acrílicas</h3>
                     <p class="about__paragraph">Las uñas en acrílico destacan en duración sobre las otras técnicas de aplicación, logrando hasta 30-60 días de crecimiento. <br>
                         Implica una mayor dificultad de aplicación y tiempo de trabajo.
                         </p>
@@ -131,8 +130,8 @@
         <section class="knowledge" id="cursos">
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Acrilicas. ¡Domina las tecnicas de uñas en acrilico!</h2>
-                    <p class="knowledge__paragraph">En este curso te llevare paso a paso por el arte de la creación de uñas en acrílico.
+                    <h2 class="subtitle">Curso completo de Acrílicas. ¡Domina las técnicas de uñas en acrílico!</h2>
+                    <p class="knowledge__paragraph">En este curso te llevaré paso a paso por el arte de la creación de uñas en acrílico.
                         Aprenderás a dominar la mejor técnica de construcción que utilice y fui desarrollando a lo largo de 10 años.
                         Esta técnica es la indicada si buscas realizar uñas duraderas. <br>
                         (Materiales incluidos).
@@ -196,7 +195,7 @@
         <section class="knowledge">
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Polygel. ¡Domina las tecnicas de uñas en polygel!</h2>
+                    <h2 class="subtitle">Curso completo de Polygel. ¡Domina las técnicas de uñas en polygel!</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a dominar el polygel. <br>
                         Llevando a cabo  construcciones con moldes y capsulas, con una terminación de esmaltado. <br>
                         (Materiales incluidos).
@@ -257,8 +256,8 @@
         <section class="knowledge">
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Soft gel. ¡Domina las tecnicas de uñas en softgel!</h2>
-                    <p class="knowledge__paragraph">En este curso llevaras a cabo la veloz técnica del soft gel. <br>
+                    <h2 class="subtitle">Curso completo de Soft gel. ¡Domina las técnicas de uñas en softgel!</h2>
+                    <p class="knowledge__paragraph">En este curso llevarás a cabo la veloz técnica del soft gel. <br>
                         Aprenderás la colocación de los tips, una óptima adherencia y un buen acabado de tus trabajos. <br>
                         (Materiales incluidos).
                         </p>
@@ -434,9 +433,7 @@
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Pestañas Volumen ruso.</h2>
-                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
-                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
-                        </p>
+                    <p class="knowledge__paragraph">En este curso aprenderás a crear pestañas de volumen ruso del 2D al  6D</p>
                 </div>
 
                 <figure class="knowledge__picture">
@@ -454,16 +451,34 @@
                 <input type="checkbox" id="btn-modal--volumen">
                 <div class="container-modal--volumen">
                     <div class="content-modal--volumen">
-                        <h2>VOLUMEN
+                        <h2>🥰👁️✨Curso extensiones de pestañas voluntan ruso del 2D al 3D 👁️💖🎓
                         </h2>
                         <p>💕🎓Jornada de 3hs aproximadamente <br>
 
-                            🎓👁️✨Temario extensiones 1x1: <br>
+                            🎓👁️✨Temario extensiones 1x1: <br> 
                             <br>
-                        💖Higienización de párpado y pestañas. <br>
-                        💖Tipos de adherentes. <br>
-                        💖Herramientas y materiales. <br>
-                        💖Preparación de diseñeo y distribución. <br>
+                            <br>
+                             🎓👁️✨Temario extensiones volumen ruso del 2D al 6D:<br>
+                             <br>
+                            💖Medidas y grosores correctos y prohibidos.<br>
+                            💖Tipos de pinzas y herramientas necesarias.<br>
+                            💖Técnicas armado de abanicos.<br>
+                            💖Diseños con mapeo según el tipo de ojo.<br>
+                            💖Práctica armado y colocación del 2D al 6D.<br>
+                            💖Asesoramiento cuidador rigurosos.<br>
+                            <br>
+                            🎓💐Incluye:<br>
+                            <br>
+                            👉🏻 Certificado de asistencia 🎓📃<br>
+                            👉🏻 Materiales para trabajar en clase 👁️💖<br>
+                            👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
+                            
+                            <br>
+                            🎓👉🏻Costo 👁️✨ $3500 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) <br>
+                            <br>
+                            💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
+                            <br>
+                            📍 En el centro de Merlo, a la vuelta del Vea 🛒 del mástil, a una cuadra y media de la Av.Libertador.<br>
                         <div class="btn-cerrar--volumen">
                             <label for="btn-modal--volumen">Cerrar</label>
                         </div>
@@ -478,8 +493,7 @@
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas.</h2>
-                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
-                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
+                    <p class="knowledge__paragraph">En este curso aprenderás el arte del lifting y perfilado de cejas. Llevando a cabo cada paso hasta llegar al resultado final. <br>
                         </p>
                 </div>
 
@@ -597,7 +611,7 @@
                     <p class="price__name">Pestañas pelo por pelo.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
                     <div class="price__items">
-                        <p class="price__features">Tecnica clasica</p>
+                        <p class="price__features">Técnica clásica</p>
                         <p class="price__features">Iniciación en extensiones</p>
                         <p class="price__features"></p>
                     </div>
@@ -605,12 +619,13 @@
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element">
-                    <p class="price__name">LIFTING Y PERMANENTE CON TINTURA DE PESTAÑAS Y CEJAS más PERFILADO DE CEJAS.</p>
+                    <p class="price__name">Lifting y permanente con tintura de pestañas y cejas más perfilado de cejas.
+                    </p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
-                        <p class="price__features">Practicas en modelo vivo</p>
-                        <p class="price__features">Encapsuladas</p>
-                        <p class="price__features">Decoraciones</p>
+                        <p class="price__features">Prácticas en modelo vivo</p>
+                        <p class="price__features"></p>
+                        <p class="price__features"></p>
                     </div>
                     <a href="https://walink.co/7b6f6b" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
@@ -706,7 +721,7 @@
 
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Donde están ubicados?
+                        <h3 class="questions__title">¿Dónde están ubicados?
                             <span class="questions__arrow">
                                 <img src="images/arrow.svg"  class="questions__img" alt="">
                             </span>
@@ -744,7 +759,7 @@
 
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Cual curso recomienda para comenzar sin conocimiento previos?
+                        <h3 class="questions__title">¿Cuál curso recomienda para comenzar sin conocimiento previos?
                             <span class="questions__arrow">
                                 <img src="images/arrow.svg"  class="questions__img" alt="">
                             </span>
@@ -775,7 +790,7 @@
     <footer class="footer">
         <section class="footer__container container">
             <nav class="nav nav--footer">
-                <h2 class="footer__title">Cursos de belleza y estetica.</h2>
+                <h2 class="footer__title">Cursos de belleza y estética.</h2>
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
                         <a href="#inicio" class="nav__links">Inicio</a>
@@ -803,7 +818,7 @@
                 </a>
             </div> -->
 
-            <h3 class="footer__copyright">Derechos reservados &copy; Constanza Ciro</h3>
+            <h3 class="footer__copyright">Derechos reservados &copy; Constanza Ciro</h3> || Diseño by Matias Posadas ||
         </section>
     </footer>
 
