Correccion de bug boton testimony en mobile

--- a/index.html
+++ b/index.html
@@ -709,8 +709,9 @@
                 </section>
                 <img src="images/rightarrow.svg" alt="" class="testimony__arrow" id="next">
             </div>
-
+            <div class="cta-button">
             <a href="https://www.facebook.com/cursoscony/reviews/?ref=page_internal" class="cta cta--testimony" target="_blank" Rel=»Noopener Noreferrer>Ver Opiniones en Facebook</a>
+            </div>
         </section>
 
         <section class="questions container" id="questions">
@@ -818,7 +819,7 @@
                 </a>
             </div> -->
 
-            <h3 class="footer__copyright">Derechos reservados &copy; Constanza Ciro</h3> || Diseño by Matias Posadas ||
+            <h3 class="footer__copyright">Derechos reservados &copy; Constanza Ciro</h3> <br>|| Diseño by Matias Posadas ||
         </section>
     </footer>
 
