--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     <a href="https://walink.co/07d3cd" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element price__element--best">
+                <div class="price__element">
                     <p class="price__name">Manicura integral completo</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>17.000</h3>
                     <div class="price__items">
@@ -630,7 +630,7 @@
                     <a href="https://walink.co/7b6f6b" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element price__element--best">
+                <div class="price__element">
                     <p class="price__name"> CURSO INTEGRAL PESTAÑAS</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>10.500</h3>
                     <div class="price__items">
