--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
                 <li class="nav__items">
                     <!-- <a href="#questions" class="nav__links">Contacto</a> -->
                 </li>
-                <img src="images/close.svg" alt="close" class="nav__close">
             </ul>
-
             <div class="nav__menu">
                 <img src="images/menu.svg" alt="menu" class="nav__img">
             </div>
+            <img src="images/close.svg" alt="close" class="nav__close">
+            
+            <video muted autoplay loop
+            src="video/video.mp4" type="video/mp4"></video>
+            <div class="capa"></div>
         </nav>
 
         <section class="hero__container container">
