Ajuste imagenes knowledge
se cambio las imágenes de figure por background img para obtener un tamaño parejo de cada imagen y adaptándolo a modo responsive.

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     </p>
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-acrilicas.png" class="knowledge__img" alt="">
+                <figure class="knowledge__picture acrilicas">
+                    <!-- <img src="images/knowledge-acrilicas.png" class="knowledge__img acrilicas" alt=""> -->
                 </figure>
 
                 <!--Boton ACRILICAS-->
@@ -205,8 +205,8 @@
                         </a>
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-polygel.jpg" class="knowledge__img" alt="">
+                <figure class="knowledge__picture polygel">
+                    <!-- <img src="images/knowledge-polygel.jpg" class="knowledge__img" alt=""> -->
                 </figure>
 
                 <!--Boton POLYGEL-->
@@ -309,8 +309,8 @@
                     <!-- FIN MODAL SOFT GEL-->
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-softgel.jpg" class="knowledge__img" alt="">
+                <figure class="knowledge__picture softgel">
+                    <!-- <img src="images/knowledge-softgel.jpg" class="knowledge__img" alt=""> -->
                 </figure>
             </div>
         </section>
@@ -323,8 +323,8 @@
                         </p>
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-semipermanente.jpg" class="knowledge__img" alt="">
+                <figure class="knowledge__picture semipermanente">
+                    <!-- <img src="images/knowledge-semipermanente.jpg" class="knowledge__img" alt=""> -->
                 </figure>
 
                 <!--Boton PESTAÑAS-->
@@ -387,8 +387,8 @@
                         </p>
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-pestanas.jpg" class="knowledge__img" alt="">
+                <figure class="knowledge__picture peloxpelo">
+                    <!-- <img src="images/knowledge-pestanas.jpg" class="knowledge__img" alt=""> -->
                 </figure>
 
                 <!--Boton PESTAÑAS-->
@@ -439,8 +439,8 @@
                     <p class="knowledge__paragraph">En este curso aprenderás a crear pestañas de volumen ruso del 2D al  6D</p>
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-volumenruso.jpg" class="knowledge__img" alt="">
+                <figure class="knowledge__picture volumenruso">
+                    <!-- <img src="images/knowledge-volumenruso.jpg" class="knowledge__img" alt=""> -->
                 </figure>
 
                 <!--Boton PESTAÑAS VOLUMEN-->
@@ -500,8 +500,8 @@
                         </p>
                 </div>
 
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-lifting.jpg" class="knowledge__img" alt="">
+                <figure class="knowledge__picture lifting">
+                    <!-- <img src="images/knowledge-lifting.jpg" class="knowledge__img" alt=""> -->
                 </figure>
 
                 <!--Boton PESTAÑAS LIFTING-->
