Se agrego REVEAL SCROLL

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Nails</title>
+    <script src="js/scrollreveal.js"></script>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/modal.css">
-
     <meta name="theme-color" content="#2091F9">
     <!-- fontawesome-->
     <script src="https://kit.fontawesome.com/e096e48514.js" crossorigin="anonymous"></script>
@@ -72,13 +72,13 @@
 
     <main>
         <section class="container about" id="inicio">
-            <h2 class="subtitle">¿Qué aprenderaz en los cursos?</h2>
-            <p class="about__paragraph">Todo lo necesario y obligatorio sobre Manicuría (Higiene, productos, limado, preparación de la fibra natural, esmaltado, y más).</p>
-            <p class="hero__paragraph">Todo  para ser Lashista, una vez termines un curso, serás capaz de desenvolverte profesionalmente en la técnica que hayas elegido.</p>
+            <h2 class="subtitle reveal-left">¿Qué aprenderaz en los cursos?</h2>
+            <p class="about__paragraph reveal-left">Todo lo necesario y obligatorio sobre Manicuría (Higiene, productos, limado, preparación de la fibra natural, esmaltado, y más).</p>
+            <p class="hero__paragraph reveal-left">Todo  para ser Lashista, una vez termines un curso, serás capaz de desenvolverte profesionalmente en la técnica que hayas elegido.</p>
 
 
             <div class="about__main">
-                <article class="about__icons">
+                <article class="about__icons reveal-right">
                     <img src="images/muscle.png" class="about__icon" alt="">
                     <h3 class="about__title">Acrílicas</h3>
                     <p class="about__paragraph">Las uñas en acrílico destacan en duración sobre las otras técnicas de aplicación, logrando hasta 30-60 días de crecimiento. <br>
@@ -86,14 +86,14 @@
                         </p>
                 </article>
 
-                <article class="about__icons">
+                <article class="about__icons reveal-left">
                     <img src="images/polygel.png" class="about__icon" alt="">
                     <h3 class="about__title">Polygel</h3>
                     <p class="about__paragraph">En comparación con las acrílicas las uñas en polygel brindan mayor facilidad de construcción y menor durabilidad. <br>
                         El acabado final es exactamente igual.</p>
                 </article>
 
-                <article class="about__icons">
+                <article class="about__icons reveal-right">
                     <img src="images/kapping.png" class="about__icon" alt="">
                     <h3 class="about__title">Soft gel</h3>
                     <p class="about__paragraph">En cuanto al soft gel, nos brinda una facilidad y velocidad de construcción inmensa en comparación con sus hermanas acrílicas y polygel, pero no logra brindarnos durabilidad.
@@ -101,7 +101,7 @@
                         </p>
                 </article>
 
-                <article class="about__icons">
+                <article class="about__icons reveal-left">
                     <img src="images/pestana.png" class="about__icon" alt="">
                     <h3 class="about__title">Pestaña pelo por pelo</h3>
                     <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
@@ -109,7 +109,7 @@
                         </p>
                 </article>
 
-                <article class="about__icons">
+                <article class="about__icons reveal-right">
                     <img src="images/volumen.png" class="about__icon" alt="">
                     <h3 class="about__title">Volumen ruso del 2D al 6D</h3>
                     <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
@@ -117,7 +117,7 @@
                         </p>
                 </article>
 
-                <article class="about__icons">
+                <article class="about__icons reveal-left">
                     <img src="images/lifting.png" class="about__icon" alt="">
                     <h3 class="about__title">Lifting y permanente con tintura de pestañas y cejas + perfilado de cejas</h3>
                     <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
@@ -128,8 +128,8 @@
         </section>
 
         <section class="knowledge" id="cursos">
-            <div class="knowledge__container container">
-                <div class="knowledge__texts">
+            <div class="knowledge__container container reveal-left">
+                <div class="knowledge__texts ">
                     <h2 class="subtitle">Curso completo de Acrílicas. ¡Domina las técnicas de uñas en acrílico!</h2>
                     <p class="knowledge__paragraph">En este curso te llevaré paso a paso por el arte de la creación de uñas en acrílico.
                         Aprenderás a dominar la mejor técnica de construcción que utilice y fui desarrollando a lo largo de 10 años.
@@ -192,7 +192,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Polygel. ¡Domina las técnicas de uñas en polygel!</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a dominar el polygel. <br>
@@ -252,7 +252,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Soft gel. ¡Domina las técnicas de uñas en softgel!</h2>
                     <p class="knowledge__paragraph">En este curso llevarás a cabo la veloz técnica del soft gel. <br>
@@ -310,7 +310,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel.</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás todo lo necesario para realizar un buen esmaltado semi permanente + técnica de kapping gel y kapping en polygel.
@@ -372,7 +372,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Pestañas pelo por pelo.</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
@@ -425,7 +425,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Pestañas Volumen ruso.</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a crear pestañas de volumen ruso del 2D al  6D</p>
@@ -484,7 +484,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas.</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás el arte del lifting y perfilado de cejas. Llevando a cabo cada paso hasta llegar al resultado final. <br>
@@ -541,9 +541,9 @@
         </section>
 
         <section class="price container">
-            <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
-            <div class="price__table">
-                <div class="price__element">
+            <h2 class="subtitle reveal-left">Obten el plan perfecto para aprender</h2>
+            <div class="price__table ">
+                <div class="price__element reveal-right">
                     <p class="price__name">Gelificadas y esculpidas en acrílico.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>7.000</h3>
                     <div class="price__items">
@@ -554,7 +554,7 @@
                     <a href="https://walink.co/07d3cd" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-left">
                     <p class="price__name">Manicura integral completo</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>17.000</h3>
                     <div class="price__items">
@@ -567,7 +567,7 @@
                     <a href="https://walink.co/4de7a1" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-right">
                     <p class="price__name">Manicura en Esculpidas y encapsuladas en polygel.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
                     <div class="price__items">
@@ -578,7 +578,7 @@
                     <a href="https://walink.co/6bb097" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-left">
                     <p class="price__name">Semi permanente, kapping gel y kapping en polygel.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
@@ -589,7 +589,7 @@
                     <a href="https://walink.co/254a8f" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-right">
                     <p class="price__name">Soft gel más decoración con pedreria</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
@@ -600,7 +600,7 @@
                     <a href="https://walink.co/1fcffe" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-left">
                     <p class="price__name">Pestañas pelo por pelo.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
                     <div class="price__items">
@@ -611,7 +611,7 @@
                     <a href="https://walink.co/6c9696" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-right">
                     <p class="price__name">Lifting y permanente con tintura de pestañas y cejas más perfilado de cejas.
                     </p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
@@ -623,7 +623,7 @@
                     <a href="https://walink.co/7b6f6b" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-left">
                     <p class="price__name"> CURSO INTEGRAL PESTAÑAS</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>10.500</h3>
                     <div class="price__items">
@@ -636,7 +636,7 @@
                     <a href="https://walink.co/75a3a5" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
-                <div class="price__element">
+                <div class="price__element reveal-right">
                     <p class="price__name">PESTAÑAS VOLUMEN RUSO.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
                     <div class="price__items">
@@ -650,11 +650,11 @@
         </div>
 
     </section>
-    <div class="subtitle--testimony">
+    <div class="subtitle--testimony reveal-down">
     <h2 class="subtitle subtitle-testimony">Testimonios de alumnas</h2>
     </div>
         <section class="testimony" id="testimonio">
-            <div class="testimony__container container">
+            <div class="testimony__container container reveal-down">
                 <img src="images/leftarrow.svg" alt="" class="testimony__arrow" id="before">
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__text">
@@ -707,13 +707,13 @@
             </div>
         </section>
 
-        <section class="questions container" id="questions">
+        <section class="questions container " id="questions">
             <h2 class="subtitle">Preguntas frecuentes</h2>
             <p class="questions__paragraph">Si tu duda no se resuelve aquí por favor contáctame.</p>
 
             <section class="questions__container">
 
-                <article class="questions__padding">
+                <article class="questions__padding reveal-right">
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Dónde están ubicados?
                             <span class="questions__arrow">
@@ -727,7 +727,7 @@
                     </div>
                 </article>
 
-                <article class="questions__padding">
+                <article class="questions__padding reveal-left">
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Que es ser una manicura integral?
                             <span class="questions__arrow">
@@ -738,7 +738,7 @@
                     </div>
                 </article>
 
-                <article class="questions__padding">
+                <article class="questions__padding reveal-right">
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Los cursos son de un día?
                             <span class="questions__arrow">
@@ -751,7 +751,7 @@
                 </article>
 
 
-                <article class="questions__padding">
+                <article class="questions__padding reveal-left">
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Cuál curso recomienda para comenzar sin conocimiento previos?
                             <span class="questions__arrow">
@@ -768,7 +768,7 @@
                 </article>
             </section>
 
-            <section class="questions__offer">
+            <section class="questions__offer reveal-down">
                 <h2 class="subtitle">¿Estas lista?</h2>
                 <p class="questions__copy">Da ese paso del cual nunca te vas a arrepentir. </p>
             </section>
@@ -781,7 +781,7 @@
         </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer reveal-top">
         <section class="footer__container container">
             <nav class="nav nav--footer">
                 <h2 class="footer__title">Cursos de belleza y estética.</h2>
@@ -812,5 +812,6 @@
     <script src="js/questions.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/gotop.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
