--- a/index.html
+++ b/index.html
@@ -650,8 +650,8 @@
         </div>
 
     </section>
-    <div class="subtitle--testimony reveal-down">
-    <h2 class="subtitle subtitle-testimony">Testimonios de alumnas</h2>
+    <div class="subtitle--testimony >">
+        <h2 class="subtitle subtitle-testimony">Testimonios de alumnas</h2>
     </div>
         <section class="testimony" id="testimonio">
             <div class="testimony__container container reveal-down">
